prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_string_concat_to_int.nut
// EXPECTED: compile-time error - string concat produces string, not int
local s: string = "hello"
local n: int = 42
local result: int = s + n
return result
